# serializer version: 1
# name: test_query
  list([
    tuple(
      1,
      2,
    ),
    tuple(
      2,
      3,
    ),
    tuple(
      3,
      4,
    ),
    tuple(
      4,
      5,
    ),
    tuple(
      5,
      5,
    ),
    tuple(
      1,
      3,
    ),
    tuple(
      2,
      4,
    ),
    tuple(
      3,
      5,
    ),
  ])
# ---
# name: test_throw
  list([
  ])
# ---
